--- a/uds-bundles/latest/cpu/uds-config.yaml
+++ b/uds-bundles/latest/cpu/uds-config.yaml
@@ -16,3 +16,7 @@ variables:
     overlap_size: 64
     embedding_model_name: text-embeddings
     top_k: 20
+
+  leapfrogai-ui:
+    domain: https://lfaiui.uds.dev
+    model: vllm
