fix: minor changes from pr review 2

--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -35,7 +35,7 @@ spec:
               value: '###ZARF_VAR_SUPABASE_URL###'
             - name: PUBLIC_SUPABASE_ANON_KEY
               value: '###ZARF_VAR_SUPABASE_ANON_KEY###'
-{{/*              Use this instead once we have Supabase hosted*/}}
+{{/*              TODO - Use this instead once we have Supabase hosted*/}}
 {{/*            - name: PUBLIC_SUPABASE_ANON_KEY*/}}
 {{/*              valueFrom:*/}}
 {{/*                secretKeyRef:*/}}
