--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -44,7 +44,7 @@ variables:
     sensitive: false
   - name: SUPABASE_URL
     description: URL for supabase
-    default: 'https://supabase.uds.dev'
+    default: 'http://supabase.leapfrogai.svc.cluster.local:8080' # TODO - update with correct endpoint once Supabase deployed
     prompt: true
     sensitive: false
   - name: SUPABASE_ANON_KEY
