--- a/uds-bundles/dev/cpu/uds-config.yaml
+++ b/uds-bundles/dev/cpu/uds-config.yaml
@@ -20,3 +20,5 @@ variables:
   leapfrogai-ui:
     domain: https://lfaiui.uds.dev
     model: vllm
+    supabase_url: http://supabase.leapfrogai.svc.cluster.local:8080
+    supabase_anon_key: ''
