--- a/uds-bundles/latest/cpu/uds-config.yaml
+++ b/uds-bundles/latest/cpu/uds-config.yaml
@@ -18,5 +18,9 @@ variables:
     top_k: 20
 
   leapfrogai-ui:
-    domain: https://lfaiui.uds.dev
-    model: vllm
+    domain: https://ai.uds.dev
+    model: llama-cpp-python
+    concurrent_requests: "false"
+    ai4ns_branding: "false"
+    leapfrogai_rag_url: http://rag.leapfrogai.svc.cluster.local:8000
+    max_tokens: 8192
