--- a/uds-bundles/latest/gpu/uds-config.yaml
+++ b/uds-bundles/latest/gpu/uds-config.yaml
@@ -23,5 +23,9 @@ variables:
     top_k: 20
 
   leapfrogai-ui:
-    domain: https://lfaiui.uds.dev
+    domain: https://ai.uds.dev
     model: vllm
+    concurrent_requests: "true"
+    ai4ns_branding: "false"
+    leapfrogai_rag_url: http://rag.leapfrogai.svc.cluster.local:8000
+    max_tokens: 16384
