Changes labels to podlabels for postgres

--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -3301,7 +3301,7 @@ postgresql:
     ##     memory: 1024Mi
     ##
     resources: {}
-    labels:
+    podLabels:
       sidecar.istio.io/inject: "false"
 
 ## External PostgreSQL configuration
