--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,12 @@ zarf-sbom/
 /values.yaml
 .pytest_cache
 *egg-info
+egg-info/
 build/
 *.whl
 .model/
 *.gguf
+.env
 
 # local model and tokenizer files
 *.bin
