Feat: sidenav redesign with import and export (#398)
* chore: merge main

* fix: remove husky reference in readme

* chore: add ability to turn off keycloak auth

* fix: dynamic env import

* fix: add disable keycloak var to zarf yaml

* chore: version bump 0.1.8

* chore: Add to uds bundle

* chore: update folder name

* fix: remove duplicate ui from bundle, adjust default vars

* fix: use dev tag for ui uds bundle

* chore: get anonkey from secretRef

* chore: Rever to require supabase anon key instead of using secret from hosted version

* chore: default uds bundle to SAAS supabase temporarily

* chore: dev/gpu config gets SAAS supabase temporarily too

* fix: dynamic variables instead of static

* fix: update variable names for zarf

* fix: conversations id import bug

* fix: minor changes from pr review

* fix: minor changes from pr review 2

* chore: update vars to pull secret for sb or use provided value

--- a/packages/ui/zarf-config.yaml
+++ b/packages/ui/zarf-config.yaml
@@ -2,6 +2,6 @@ package:
   create:
     set:
       image_repository: 'ghcr.io/defenseunicorns/leapfrogai/leapfrogai-ui'
-      image_version: 0.1.7
+      image_version: dev
       name: leapfrogai-ui
     max_package_size: '1000000000'
