--- a/packages/ui/chart/templates/ui/deployment.yaml
+++ b/packages/ui/chart/templates/ui/deployment.yaml
@@ -19,23 +19,31 @@ spec:
           ports:
             - containerPort: 3000
           env:
-            - name: PUBLIC_LEAPFROGAI_API_BASE_URL
+            - name: LEAPFROGAI_API_BASE_URL
               value: '###ZARF_VAR_LEAPFROGAI_API_BASE_URL###'
             - name: ORIGIN
               value: '###ZARF_VAR_DOMAIN###'
-            - name: PUBLIC_DEFAULT_MODEL
+            - name: DEFAULT_MODEL
               value: '###ZARF_VAR_MODEL###'
-            - name: PUBLIC_DEFAULT_SYSTEM_PROMPT
+            - name: DEFAULT_SYSTEM_PROMPT
               value: '###ZARF_VAR_SYSTEM_PROMPT###'
-            - name: PUBLIC_DEFAULT_TEMPERATURE
+            - name: DEFAULT_TEMPERATURE
               value: '###ZARF_VAR_TEMPERATURE###'
             - name: LEAPFROGAI_API_KEY
               value: '###ZARF_VAR_LEAPFROGAI_API_KEY###'
             - name: PUBLIC_SUPABASE_URL
-              value: '###ZARF_VAR_SUPABASE_URL###'
+              value: {{ .Values.package.supabase_url }}
             - name: PUBLIC_SUPABASE_ANON_KEY
-              value: '###ZARF_VAR_SUPABASE_ANON_KEY###'
-
+              {{ if .Values.package.supabase_anon_key  }}
+              value: {{ .Values.package.supabase_anon_key }}
+              {{ else }}
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-jwt
+                  key: anonKey
+              {{ end }}
+            - name: PUBLIC_DISABLE_KEYCLOAK
+              value: '###ZARF_VAR_DISABLE_KEYCLOAK###'
           resources:
             requests:
               memory: '0'
