Generates all necessary jwt values

--- a/packages/supabase/jwt-secret-job.yaml
+++ b/packages/supabase/jwt-secret-job.yaml
@@ -43,11 +43,43 @@ spec:
           args:
             - |
               #!/bin/bash
-              echo "Generating JWT secret"
+              echo "Generating JWT token"
               # Taken from https://supabase.com/docs/guides/self-hosting#api-keys
+              {{- if not .Values.jwt.secret }}
               SECRET="$(uuidgen)"
-              echo "Writing JWT secret to file"
+              {{- end }}
+              {{- if not .Values.jwt.anonKey }}
+              ANON_KEY="$(jwt encode --secret=$SECRET '{"role":"anon","iss":"supabase","iat":1676934000,"exp":1834700400}')"
+              {{- end }}
+              {{- if not .Values.jwt.serviceKey }}
+              SERVICE_KEY="$(jwt encode --secret=$SECRET '{"role":"service_role","iss":"supabase","iat":1676934000,"exp":1834700400}')"
+              {{- end }}
+              echo "Writing JWT token to file"
               echo -n "$SECRET" > /bitnami/supabase/secrets/secret
+              echo -n "$ANON_KEY" > /bitnami/supabase/secrets/anon-key
+              echo -n "$SERVICE_KEY" > /bitnami/supabase/secrets/service-key
+          env:
+            {{- if .Values.jwt.secret }}
+            - name: SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "supabase.jwt.secretName" . }}
+                  key: secret
+            {{- end }}
+            {{- if .Values.jwt.anonKey }}
+            - name: ANON_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "supabase.jwt.secretName" . }}
+                  key: secret
+            {{- end }}
+            {{- if .Values.jwt.serviceKey }}
+            - name: SERVICE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "supabase.jwt.secretName" . }}
+                  key: secret
+            {{- end }}
           {{- if .Values.jwt.autoGenerate.containerSecurityContext.enabled }}
           securityContext: {{- include "common.compatibility.renderSecurityContext" (dict "secContext" .Values.jwt.autoGenerate.containerSecurityContext "context" $) | nindent 12 }}
           {{- end }}
@@ -90,7 +122,7 @@ spec:
               set -o nounset
               set -o pipefail
               echo "Creating secret"
-              kubectl create secret --namespace={{ include "common.names.namespace" . }} generic {{ include "supabase.jwt.secretName" . }} --from-file=/bitnami/supabase/secrets/secret --dry-run -o yaml | kubectl apply -f -
+              kubectl create secret --namespace={{ include "common.names.namespace" . }} generic {{ include "supabase.jwt.secretName" . }} --from-file=/bitnami/supabase/secrets/secret --from-file=/bitnami/supabase/secrets/anon-key --from-file=/bitnami/supabase/secrets/service-key --dry-run -o yaml | kubectl apply -f -
           {{- if .Values.jwt.autoGenerate.containerSecurityContext.enabled }}
           securityContext: {{- include "common.compatibility.renderSecurityContext" (dict "secContext" .Values.jwt.autoGenerate.containerSecurityContext "context" $) | nindent 12 }}
           {{- end }}
