278 feat(ui): cancel generation (#406)
* feat: cancel message stream, needs tests

* chore: add tests

* chore: use submit type for cancel button

* chore: wip e2e improvements

* chore: wip e2e improvements 2

* chore: merge main

* fix: remove husky reference in readme

* chore: add ability to turn off keycloak auth

* fix: dynamic env import

* fix: add disable keycloak var to zarf yaml

* chore: version bump 0.1.8

* chore: Add to uds bundle

* chore: update folder name

* fix: remove duplicate ui from bundle, adjust default vars

* fix: use dev tag for ui uds bundle

* chore: get anonkey from secretRef

* chore: Rever to require supabase anon key instead of using secret from hosted version

* chore: default uds bundle to SAAS supabase temporarily

* chore: dev/gpu config gets SAAS supabase temporarily too

* fix: dynamic variables instead of static

* fix: update variable names for zarf

* fix: conversations id import bug

* fix: remove duplicated test

* fix: e2e tests

* fix: minor changes from pr review

* fix: minor changes from pr review 2

* chore: update vars to pull secret for sb or use provided value

* chore: wip, fix response bug when backend down

* chore: adjust tests

* chore: update e2es

--- a/src/leapfrogai_ui/.env.example
+++ b/src/leapfrogai_ui/.env.example
@@ -13,7 +13,9 @@ LEAPFROGAI_API_KEY=my-test-key
 # PLAYWRIGHT
 USERNAME=user1@test.com
 PASSWORD=<password>
-
+MFA_SECRET=<secret>
+# Service Role key allows Playwright to bypass row level security for test setup/cleanup. This is only needed for tests.
+SERVICE_ROLE_KEY=<key>
 # SUPABASE AUTH (when running Supabase Locally)
 SUPABASE_AUTH_KEYCLOAK_CLIENT_ID=lfaiui
 SUPABASE_AUTH_KEYCLOAK_SECRET=<secret>
