--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -11,12 +11,12 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"test:integration": "supabase db reset &&  playwright test",
-		"test:integration:ui": "supabase db reset &&  playwright test --ui",
+		"test:integration": "playwright test",
+		"test:integration:ui": "playwright test --ui",
 		"test:unit": "vitest run",
 		"test:unit:watch": "vitest",
 		"prepare": "husky",
-		"supabase:start": "supabase start && docker exec -u 0 supabase_auth_supabase /bin/sh -c \"echo '100.104.70.77 keycloak.admin.uds.dev' >> /etc/hosts\"",
+		"supabase:start": "supabase start && docker exec -u 0 supabase_auth_supabase /bin/sh -c \"echo '100.115.154.78 keycloak.admin.uds.dev' >> /etc/hosts\"",
 		"supabase:stop": "supabase stop",
 		"supabase:reset": "supabase db reset",
 		"supbase:migrate": "supbase migration up"
