--- a/packages/ui/chart/templates/ui/service.yaml
+++ b/packages/ui/chart/templates/ui/service.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: leapfrogai-ui
+  name: {{ .Values.package.name }}
   namespace: leapfrogai
   labels:
-    app: leapfrogai-ui
-    service: leapfrogai-ui
-    zarf.dev/connect-name: leapfrogai-ui
+    app: {{ .Values.package.name }}
+    service: {{ .Values.package.name }}
+    zarf.dev/connect-name: {{ .Values.package.name }}
   annotations:
     zarf.dev/connect-description: 'The LeapfrogAI UI'
 spec:
   selector:
-    app: leapfrogai-ui
+    app: {{ .Values.package.name }}
   ports:
     - name: http
       port: 3000
