--- a/packages/ui/chart/values.yaml
+++ b/packages/ui/chart/values.yaml
@@ -1,4 +1,5 @@
 package:
+  name: lfaiui
   host: lfaiui
   supabase_url: '###ZARF_VAR_SUPABASE_URL###'
   supabase_anon_key: '###ZARF_VAR_SUPABASE_ANON_KEY###'
