--- a/uds-bundles/dev/cpu/uds-config.yaml
+++ b/uds-bundles/dev/cpu/uds-config.yaml
@@ -1,4 +1,12 @@
 variables:
+  leapfrogai-ui:
+    domain: https://ai.uds.dev
+    model: llama-cpp-python
+    concurrent_requests: "false"
+    ai4ns_branding: "false"
+    leapfrogai_rag_url: http://rag.leapfrogai.svc.cluster.local:8000
+    max_tokens: 8192
+
   text-embeddings:
     gpu_limit: 0
 
@@ -17,7 +25,7 @@ variables:
     embedding_model_name: text-embeddings
     top_k: 20
 
-  leapfrogai-ui:
+  lfaiui:
     domain: https://lfaiui.uds.dev
     model: vllm
     supabase_url: http://supabase.leapfrogai.svc.cluster.local:8080
