--- a/packages/ui/zarf-config.yaml
+++ b/packages/ui/zarf-config.yaml
@@ -3,5 +3,5 @@ package:
     set:
       image_repository: 'ghcr.io/defenseunicorns/leapfrogai/leapfrogai-ui'
       image_version: dev
-      name: leapfrogai-ui
+      name: lfaiui
     max_package_size: '1000000000'
