fixing a couple issues with the pipelines running on unrelated files

--- a/.github/workflows/e2e-shim.yaml
+++ b/.github/workflows/e2e-shim.yaml
@@ -16,6 +16,7 @@ on:
 
       # Catch generic github metadata files
       - "CODEOWNERS"
+      - "CONTRIBUTING.md"
       - ".gitignore"
       - "LICENSE"
       - "pre-commit-config.yaml"
