--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -18,6 +18,7 @@ on:
 
       # Ignore updates to generic github metadata files
       - "!CODEOWNERS"
+      - "!CONTRIBUTING.md"
       - "!.gitignore"
       - "!LICENSE"
 
