fix: lfaiui naming part 2

--- a/packages/ui/chart/Chart.yaml
+++ b/packages/ui/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: leapfrogai-ui
+name: lfaiui
 description: UI to interact with LFAI tools
 
 # A chart can be either an 'application' or a 'library' chart.
