--- a/uds-bundles/dev/gpu/uds-config.yaml
+++ b/uds-bundles/dev/gpu/uds-config.yaml
@@ -22,7 +22,7 @@ variables:
     embedding_model_name: text-embeddings
     top_k: 20
 
-  leapfrogai-ui:
+  lfaiui:
     domain: https://lfaiui.uds.dev
     model: vllm
     supabase_url: http://supabase.leapfrogai.svc.cluster.local:8080
