e2e only runs when pr is ready

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -1,6 +1,10 @@
 name: e2e
 on:
   pull_request:
+    types:
+      - ready_for_review
+      - review_requested
+      - synchronize
     paths:
       # Catch-all
       - "**"
