e2e only runs when pr is ready

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -44,6 +44,7 @@ concurrency:
 jobs:
   e2e:
     runs-on: ai-ubuntu-big-boy-8-core
+    if: ${{ !github.event.pull_request.draft }}
 
     steps:
         - name: Checkout Repo
