add README to e2e ignore

--- a/.github/workflows/e2e-shim.yaml
+++ b/.github/workflows/e2e-shim.yaml
@@ -16,6 +16,7 @@ on:
 
       # Catch generic github metadata files
       - "CODEOWNERS"
+      - "README.md"
       - "CONTRIBUTING.md"
       - ".gitignore"
       - "LICENSE"
