--- a/uds-bundles/latest/gpu/uds-bundle.yaml
+++ b/uds-bundles/latest/gpu/uds-bundle.yaml
@@ -34,3 +34,8 @@ packages:
   - name: leapfrogai-ui
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-ui
     ref: 0.3.5
+
+  # UI - new UI TODO - point to ghcr image after Sprint 0.7.0
+  - name: lfaiui
+    path: ../../../packages/ui/
+    ref: dev
