--- a/uds-bundles/latest/gpu/uds-config.yaml
+++ b/uds-bundles/latest/gpu/uds-config.yaml
@@ -29,3 +29,9 @@ variables:
     ai4ns_branding: "false"
     leapfrogai_rag_url: http://rag.leapfrogai.svc.cluster.local:8000
     max_tokens: 16384
+
+  lfaiui:
+    domain: https://lfaiui.uds.dev
+    model: vllm
+    supabase_url: http://supabase.leapfrogai.svc.cluster.local:8080
+    supabase_anon_key: ''
