--- a/packages/supabase/create-service-account.yaml
+++ b/packages/supabase/create-service-account.yaml
@@ -7,8 +7,8 @@ SPDX-License-Identifier: APACHE-2.0
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "supabase.jwt.serviceAccountName" . }}
-  namespace: {{ include "common.names.namespace" . | quote }}
+  name: supabase.jwt.init
+  namespace: leapfrogai
   labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
     app.kubernetes.io/part-of: supabase
   {{- if or .Values.serviceAccount.annotations .Values.commonAnnotations }}
