--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -7,6 +7,28 @@ metadata:
     supabase instance and all of its dependencies
 
 components:
+  - name: supabase-minimal
+    required: true
+    charts:
+      - name: supabase-minimal
+        namespace: leapfrogai
+        url: oci://registry-1.docker.io/bitnamicharts/supabase
+        releaseName: supabase
+        version: 4.0.1
+        valuesFiles:
+          - "bitnami-values-basic.yaml"
+    images:
+      - docker.io/bitnami/gotrue:2.149.0-debian-12-r0
+      - docker.io/bitnami/jwt-cli:6.0.0-debian-12-r19
+      - docker.io/bitnami/kubectl:1.29.3-debian-12-r4
+      - docker.io/bitnami/os-shell:12-debian-12-r18
+      - docker.io/bitnami/postgrest:11.2.2-debian-12-r14
+      - docker.io/bitnami/supabase-postgres:15.1.1-debian-12-r24
+      - docker.io/bitnami/supabase-postgres-meta:0.80.0-debian-12-r1
+      - docker.io/bitnami/supabase-realtime:2.28.22-debian-12-r0
+      - docker.io/bitnami/supabase-storage:0.48.4-debian-12-r0
+      - docker.io/bitnami/supabase-studio:0.24.3-debian-12-r0
+      - docker.io/bitnami/kong:3.6.1-debian-12-r13
   - name: supabase
     required: true
     charts:
@@ -34,4 +56,3 @@ components:
         namespace: leapfrogai
         files:
           - "uds-package.yaml"
-          - "create-service-account.yaml"
