--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -7,11 +7,11 @@ metadata:
     supabase instance and all of its dependencies
 
 components:
-  - name: supabase-minimal
-    description: used to create the jwt token job due to issues with the order of operations in the upstream chart when deploying via Zarf
+  - name: supabase-bootstrap
+    description: pre-emptively creates the JWT token ServiceAccount and Job, this prevents hanging from occurring due to the Zarf lifecycle
     required: true
     charts:
-      - name: supabase-minimal
+      - name: supabase-bootstrap
         namespace: leapfrogai
         url: oci://registry-1.docker.io/bitnamicharts/supabase
         releaseName: supabase
@@ -19,17 +19,8 @@ components:
         valuesFiles:
           - "bitnami-values-basic.yaml"
     images:
-      - docker.io/bitnami/gotrue:2.149.0-debian-12-r0
       - docker.io/bitnami/jwt-cli:6.0.0-debian-12-r19
       - docker.io/bitnami/kubectl:1.29.3-debian-12-r4
-      - docker.io/bitnami/os-shell:12-debian-12-r18
-      - docker.io/bitnami/postgrest:11.2.2-debian-12-r14
-      - docker.io/bitnami/supabase-postgres:15.1.1-debian-12-r24
-      - docker.io/bitnami/supabase-postgres-meta:0.80.0-debian-12-r1
-      - docker.io/bitnami/supabase-realtime:2.28.22-debian-12-r0
-      - docker.io/bitnami/supabase-storage:0.48.4-debian-12-r0
-      - docker.io/bitnami/supabase-studio:0.24.3-debian-12-r0
-      - docker.io/bitnami/kong:3.6.1-debian-12-r13
   - name: supabase
     required: true
     charts:
